--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,29 @@
   border-radius: 34.3439px;
 }
 
+.speech-tail {
+  /* position: absolute;
+  width: 69.84px;
+  height: 25.89px;
+  left: 138.87px;
+  top: 102.22px;
+
+  background: #F0F0F0;
+  border: 0.818863px solid #000000;
+  transform: matrix(0.87, 0.57, -0.47, 0.85, 0, 0); */
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 25vw;
+  top: 15vw;
+  transform: rotate(33deg);
+
+
+  border-style: solid;
+  border-width: 0 90px 60px 90px;
+  border-color: transparent transparent black transparent;
+}
+
 /* Status Button */
 
 .status-button {
