--- a/src/App.css
+++ b/src/App.css
@@ -149,26 +149,25 @@
 }
 
 .speech-tail {
-  /* position: absolute;
-  width: 69.84px;
-  height: 25.89px;
-  left: 138.87px;
-  top: 102.22px;
-
-  background: #F0F0F0;
-  border: 0.818863px solid #000000;
-  transform: matrix(0.87, 0.57, -0.47, 0.85, 0, 0); */
   position: absolute;
   width: 0;
   height: 0;
-  left: 25vw;
-  top: 15vw;
+  left: 24vw;
+  top: 13vw;
   transform: rotate(33deg);
 
 
   border-style: solid;
-  border-width: 0 90px 60px 90px;
+}
+
+.tail1 {
+  border-width: 0 5vw 4vw 5vw;
   border-color: transparent transparent black transparent;
+}
+
+.tail2 {
+  border-width: 0 4.99vw 3.95vw 4.94vw;
+  border-color: transparent transparent #F0F0F0 transparent;
 }
 
 /* Status Button */
@@ -215,6 +214,10 @@
     background: linear-gradient(180deg, rgba(93, 223, 215, 0.21) 0%, rgba(93, 223, 215, 0.65) 48.44%, #5DDFD7 100%);
     border: 1px solid black;
     border-radius: 15px;
+  }
+
+  .speech-tail {
+    border-color: transparent transparent transparent transparent;
   }
 
 }
