--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@
   width: 100vw;
   height: 100vh;
 
-  background: rgba(147, 255, 250, 0.83);
+  /* background: rgba(147, 255, 250, 0.83); */
+  background: linear-gradient(180deg, #D5D5D5 0%, rgba(5, 5, 5, 0) 100%);
   border: 1px solid black;
 }
 
@@ -120,9 +121,21 @@
   height: 3vw;
   margin-top: 4%;
 
+  min-width: 277px;
+  min-height: 32px;
+
   background: #FFFFFF;
   border: 1px solid #000000;
   border-radius: 5px;
+}
+
+.output-text {
+  text-align: end;
+  margin: 1%;
+
+
+  font-family: 'Inter';
+  font-size: 2.1vw;
 }
 
 /* Calculator Buttons */
@@ -130,6 +143,9 @@
 .buttons-frame {
   width: 26vw;
   height: 26vw;
+
+  min-width: 277px;
+  min-height: 277px;
 
   display: flex;
   justify-content: space-between;
@@ -144,6 +160,9 @@
   width: 6vw;
   height: 4.7vw;
 
+  min-width: 64px;
+  min-height: 50px;
+
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.99) 0%, #C9C9C9 100%);
   border: 1px solid black;
   border-radius: 12px;
@@ -155,7 +174,7 @@
   margin-bottom: 0;
 
   font-family: 'Inter';
-  font-size: 26.9845px;
+  font-size: max(24px, 2.5vw);
 }
 
 /* Calculator Eyes */
@@ -245,6 +264,15 @@
   background: linear-gradient(180deg, rgba(93, 223, 215, 0.21) 0%, rgba(93, 223, 215, 0.65) 48.44%, #5DDFD7 100%);
   border: 1px solid black;
   border-radius: 15px;
+}
+
+.status-text {
+  text-align: center;
+  margin-top: 6%;
+  margin-bottom: 0;
+
+  font-family: 'Inter';
+  font-size: max(24px, 2.5vw);
 }
 
 /* Media */
