Added some librarys for animation and started making text. I tried making the text random based on when the user clicks the equals button but I have state in buttons and in the main calculator and I can't figure out how to make the button click run its usual function and then a seperate function to change state in calculator

--- a/src/App.css
+++ b/src/App.css
@@ -242,6 +242,12 @@ p {
   border-radius: 34.3439px;
 }
 
+.bubble-text {
+  text-align: center;
+  /* margin-top: 4vw; */
+  font-size: 2vw;
+}
+
 .speech-tail {
   position: absolute;
   width: 0;
